[package]
name = "sol-arena"
version = "0.1.0"
description = "SolArena — AI Strategy Gaming on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
